// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The AvatarCloud component should accept a maxAvatarWidth 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "9.876543120000001%",
        "position": "absolute",
        "top": "9.876543120000001%",
        "width": "20%",
        "zIndex": 0,
      }
    }
  >
    <Image
      avatarWidth="20%"
      getXYPositions={
        Object {
          "left": "9.876543120000001%",
          "top": "9.876543120000001%",
        }
      }
      onLoad={[Function]}
      order={0}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?1",
            "url": "https://picsum.photos/200?1",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "9.876543120000001%",
          "opacity": 0,
          "position": "absolute",
          "top": "9.876543120000001%",
          "width": "20%",
          "zIndex": 0,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "9.876543120000001%",
        "position": "absolute",
        "top": "9.876543120000001%",
        "width": "20%",
        "zIndex": 1,
      }
    }
  >
    <Image
      avatarWidth="20%"
      getXYPositions={
        Object {
          "left": "9.876543120000001%",
          "top": "9.876543120000001%",
        }
      }
      onLoad={[Function]}
      order={1}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?2",
            "url": "https://picsum.photos/200?2",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "9.876543120000001%",
          "opacity": 0,
          "position": "absolute",
          "top": "9.876543120000001%",
          "width": "20%",
          "zIndex": 1,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "9.876543120000001%",
        "position": "absolute",
        "top": "9.876543120000001%",
        "width": "20%",
        "zIndex": 2,
      }
    }
  >
    <Image
      avatarWidth="20%"
      getXYPositions={
        Object {
          "left": "9.876543120000001%",
          "top": "9.876543120000001%",
        }
      }
      onLoad={[Function]}
      order={2}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?3",
            "url": "https://picsum.photos/200?3",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "9.876543120000001%",
          "opacity": 0,
          "position": "absolute",
          "top": "9.876543120000001%",
          "width": "20%",
          "zIndex": 2,
        }
      }
    />
  </View>
</View>
`;

exports[`The AvatarCloud component should accept a minAvatarWidth 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "0%",
        "position": "absolute",
        "top": "0%",
        "width": "100%",
        "zIndex": 0,
      }
    }
  >
    <Image
      avatarWidth="100%"
      getXYPositions={
        Object {
          "left": "0%",
          "top": "0%",
        }
      }
      onLoad={[Function]}
      order={0}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?1",
            "url": "https://picsum.photos/200?1",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "0%",
          "opacity": 0,
          "position": "absolute",
          "top": "0%",
          "width": "100%",
          "zIndex": 0,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "0%",
        "position": "absolute",
        "top": "0%",
        "width": "100%",
        "zIndex": 1,
      }
    }
  >
    <Image
      avatarWidth="100%"
      getXYPositions={
        Object {
          "left": "0%",
          "top": "0%",
        }
      }
      onLoad={[Function]}
      order={1}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?2",
            "url": "https://picsum.photos/200?2",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "0%",
          "opacity": 0,
          "position": "absolute",
          "top": "0%",
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "0%",
        "position": "absolute",
        "top": "0%",
        "width": "100%",
        "zIndex": 2,
      }
    }
  >
    <Image
      avatarWidth="100%"
      getXYPositions={
        Object {
          "left": "0%",
          "top": "0%",
        }
      }
      onLoad={[Function]}
      order={2}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?3",
            "url": "https://picsum.photos/200?3",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "0%",
          "opacity": 0,
          "position": "absolute",
          "top": "0%",
          "width": "100%",
          "zIndex": 2,
        }
      }
    />
  </View>
</View>
`;

exports[`The AvatarCloud component should accept a primaryAvatar 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "width": "50%",
        "zIndex": 100,
      }
    }
  >
    <Image
      avatarWidth="50%"
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "opacity": 0,
          "width": "50%",
          "zIndex": 100,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "9.876543120000001%",
        "position": "absolute",
        "top": "9.876543120000001%",
        "width": "20%",
        "zIndex": 0,
      }
    }
  >
    <Image
      avatarWidth="20%"
      getXYPositions={
        Object {
          "left": "9.876543120000001%",
          "top": "9.876543120000001%",
        }
      }
      onLoad={[Function]}
      order={0}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?1",
            "url": "https://picsum.photos/200?1",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "9.876543120000001%",
          "opacity": 0,
          "position": "absolute",
          "top": "9.876543120000001%",
          "width": "20%",
          "zIndex": 0,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "9.876543120000001%",
        "position": "absolute",
        "top": "9.876543120000001%",
        "width": "20%",
        "zIndex": 1,
      }
    }
  >
    <Image
      avatarWidth="20%"
      getXYPositions={
        Object {
          "left": "9.876543120000001%",
          "top": "9.876543120000001%",
        }
      }
      onLoad={[Function]}
      order={1}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?2",
            "url": "https://picsum.photos/200?2",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "9.876543120000001%",
          "opacity": 0,
          "position": "absolute",
          "top": "9.876543120000001%",
          "width": "20%",
          "zIndex": 1,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "9.876543120000001%",
        "position": "absolute",
        "top": "9.876543120000001%",
        "width": "20%",
        "zIndex": 2,
      }
    }
  >
    <Image
      avatarWidth="20%"
      getXYPositions={
        Object {
          "left": "9.876543120000001%",
          "top": "9.876543120000001%",
        }
      }
      onLoad={[Function]}
      order={2}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?3",
            "url": "https://picsum.photos/200?3",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "9.876543120000001%",
          "opacity": 0,
          "position": "absolute",
          "top": "9.876543120000001%",
          "width": "20%",
          "zIndex": 2,
        }
      }
    />
  </View>
</View>
`;

exports[`The AvatarCloud component should render 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "9.876543120000001%",
        "position": "absolute",
        "top": "9.876543120000001%",
        "width": "20%",
        "zIndex": 0,
      }
    }
  >
    <Image
      avatarWidth="20%"
      getXYPositions={
        Object {
          "left": "9.876543120000001%",
          "top": "9.876543120000001%",
        }
      }
      onLoad={[Function]}
      order={0}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?1",
            "url": "https://picsum.photos/200?1",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "9.876543120000001%",
          "opacity": 0,
          "position": "absolute",
          "top": "9.876543120000001%",
          "width": "20%",
          "zIndex": 0,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "9.876543120000001%",
        "position": "absolute",
        "top": "9.876543120000001%",
        "width": "20%",
        "zIndex": 1,
      }
    }
  >
    <Image
      avatarWidth="20%"
      getXYPositions={
        Object {
          "left": "9.876543120000001%",
          "top": "9.876543120000001%",
        }
      }
      onLoad={[Function]}
      order={1}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?2",
            "url": "https://picsum.photos/200?2",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "9.876543120000001%",
          "opacity": 0,
          "position": "absolute",
          "top": "9.876543120000001%",
          "width": "20%",
          "zIndex": 1,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "9.876543120000001%",
        "position": "absolute",
        "top": "9.876543120000001%",
        "width": "20%",
        "zIndex": 2,
      }
    }
  >
    <Image
      avatarWidth="20%"
      getXYPositions={
        Object {
          "left": "9.876543120000001%",
          "top": "9.876543120000001%",
        }
      }
      onLoad={[Function]}
      order={2}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200?3",
            "url": "https://picsum.photos/200?3",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "9.876543120000001%",
          "opacity": 0,
          "position": "absolute",
          "top": "9.876543120000001%",
          "width": "20%",
          "zIndex": 2,
        }
      }
    />
  </View>
</View>
`;
